--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ inflection = "^0.5.1"
 dynaconf = "^3.1.12"
 Faker = "^23.1.0"
 boltons = "^24.0.0"
+pydantic = "^2.7.4"
 
 
 [tool.poetry.dev-dependencies]
